--- a/Lab8/Lab8.vcxproj
+++ b/Lab8/Lab8.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{00d63ff8-b81a-4b17-b4a4-bf4cefa6fd66}</ProjectGuid>
+    <ProjectGuid>{378bd181-5388-4f59-90af-e409a9172820}</ProjectGuid>
     <RootNamespace>Lab8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -104,13 +104,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\University Labs\Computer 3D Graphics\3DLabs\Dependencies\glm;C:\University Labs\Computer 3D Graphics\3DLabs\Dependencies\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\Dependencies\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\University Labs\Computer 3D Graphics\3DLabs\Dependencies\GLFW\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)\Dependencies\libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;user32.lib;gdi32.lib;shell32.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,7 +130,44 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="glad.c" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="PerlinNoise.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="Terrain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
+    <ClInclude Include="PerlinNoise.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Terrain.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\download.jfif" />
+    <Image Include="Resources\EU.png" />
+    <Image Include="Resources\greenTexture.jpg" />
+    <Image Include="Resources\heightMap.jpg" />
+    <Image Include="Resources\map.jpg" />
+    <Image Include="Resources\ter.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\depthFrag.fs" />
+    <None Include="Shaders\depthVert.vs" />
+    <None Include="Shaders\fragShader.fs" />
+    <None Include="Shaders\plainFrag.fs" />
+    <None Include="Shaders\plainVert.vs" />
+    <None Include="Shaders\SMFragShader.fs" />
+    <None Include="Shaders\SMVertShader.vs" />
+    <None Include="Shaders\tessControlShader.tcs" />
+    <None Include="Shaders\tessEvaluationShader.tes" />
+    <None Include="Shaders\VertShader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
